fp-macros/tests/ui/invalid_assoc_type_name.stderr
error: Expected associated type name 'Of'
  --> tests/ui/invalid_assoc_type_name.rs:11:14
   |
11 |         type Foo<A> = Option<A>;
   |              ^^^
